Curation assistant: Implement distributions